app/assets/stylesheets/shared/components.scss
@import "utils";
@import "mixins";

/*
Resource list.

A group of related objects that are created
in a usual CRUD style manner.
They usually have links to the resource and perhaps
links to edit and delete etc.
================================================== */

@mixin list-row {
  margin: 0;
  border-bottom: 1px solid #ddd;
  padding: 10px 20px;

  @include transition(background-color);

  &:last-child {
    border-bottom: 1px solid #bbb;
  }

  &:hover {
    background: #f9f9f9;
  }
}

.actions {
  background: #eee;
  border: 1px solid #e6e6e6;
  padding: 6px 10px 6px 0;
  @include rounded;

  .label {
    display: inline;
    font-size: 12px;
    line-height: 8px;
    margin-left: 10px;
    color: #555;
    text-transform: uppercase;
  }

  form {
    margin-bottom: 0;
  }

  input[type=submit] {
    margin-bottom: 0;
  }

  a.button, form {
    margin-bottom: 0;
    margin-left: 5px;
    display: inline;
  }
  
  a.button {
    padding-top: 6px;
    padding-bottom: 7px;
  }

  &:after {
    @include clearfix;
  }
}

section.resource_list {

  h1 {
    font-size: 21px;
    line-height: 30px;
    margin-bottom: 0;
    margin-top: 0;
    border-bottom: 1px solid #ccc;
    border-left: 1px solid #ddd;
    border-right: 1px solid #ddd;
    border-top: 1px solid #eee;
    background: #eee;
    padding: 10px 20px 10px 20px;
  }

  nav {
    .states {
      padding-top: 17px;

      a {
        display: block;
        float: left;
        padding: 0.5em 1em;
        border: 1px solid #ddd;
        border-left: 0;
        border-bottom: 0;
        text-decoration: none;
        color: #555;

        &:hover {
         background: #f5f5f5;
        }

        &.current {
          background: #eee;
          font-weight: bold;

        }

        &:first-child {
          border-left: 1px solid #ddd;
          @include rounded_specific(3px, 0, 0, 0);
        }

        &:last-child {
          @include rounded_specific(0, 3px, 0, 0);
        }
      }
    }
    
    .actions {
      padding: 10px 10px 10px 0;
    }
  }

  ul, table {
    margin: 0;
    background: #fefefe;
  }

  ul {
    li {
      @include list-row;
    }
  }

  table {
    width: 100%;

    tr {
      @include list-row;
      border-left: 1px solid #ddd;
      border-right: 1px solid #ddd;
    }

    thead tr:hover {
      background: transparent;
    }

    th, td {
      text-align: left;
      padding: 10px 20px;
      line-height: 20px;
    }
  }

}

/* 768px */
@media only screen and (min-width: 768px) {
  section.resource_list nav .states {
    float: left;
    padding-top: 21px;
  }

  section.resource_list nav .actions {
    float: right;
    margin-bottom: 10px;
  }
}

